docs/api/qiskit/0.40/qiskit.visualization.plot_gate_map.md
---
title: plot_gate_map
description: API reference for qiskit.visualization.plot_gate_map
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.visualization.plot_gate_map
---

# qiskit.visualization.plot\_gate\_map

<span id="qiskit.visualization.plot_gate_map" />

`plot_gate_map(backend, figsize=None, plot_directed=False, label_qubits=True, qubit_size=None, line_width=4, font_size=None, qubit_color=None, qubit_labels=None, line_color=None, font_color='w', ax=None, filename=None, qubit_coordinates=None)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.23/qiskit/visualization/gate_map.py "view source code")

Plots the gate map of a device.

**Parameters**

*   **backend** ([*Backend*](qiskit.providers.Backend "qiskit.providers.Backend")) – The backend instance that will be used to plot the device gate map.
*   **figsize** (*tuple*) – Output figure size (wxh) in inches.
*   **plot\_directed** (*bool*) – Plot directed coupling map.
*   **label\_qubits** (*bool*) – Label the qubits.
*   **qubit\_size** (*float*) – Size of qubit marker.
*   **line\_width** (*float*) – Width of lines.
*   **font\_size** (*int*) – Font size of qubit labels.
*   **qubit\_color** (*list*) – A list of colors for the qubits
*   **qubit\_labels** (*list*) – A list of qubit labels
*   **line\_color** (*list*) – A list of colors for each line from coupling\_map.
*   **font\_color** (*str*) – The font color for the qubit labels.
*   **ax** (*Axes*) – A Matplotlib axes instance.
*   **filename** (*str*) – file path to save image to.
*   **qubit\_coordinates** (*Sequence*) – An optional sequence input (list or array being the most common) of 2d coordinates for each qubit. The length of the sequence much match the number of qubits on the backend. The sequence should be the planar coordinates in a 0-based square grid where each qubit is located.

**Returns**

A Matplotlib figure instance.

**Return type**

Figure

**Raises**

*   **QiskitError** – if tried to pass a simulator, or if the backend is None, but one of num\_qubits, mpl\_data, or cmap is None.
*   **MissingOptionalLibraryError** – if matplotlib not installed.

**Example**

```python
from qiskit import QuantumCircuit, execute
from qiskit.providers.fake_provider import FakeVigoV2
from qiskit.visualization import plot_gate_map

backend = FakeVigoV2()

plot_gate_map(backend)
```

([Source code](qiskit-visualization-plot_gate_map-1.py), [png](qiskit-visualization-plot_gate_map-1.png), [hires.png](qiskit-visualization-plot_gate_map-1.hires.png), [pdf](qiskit-visualization-plot_gate_map-1.pdf))

![../\_images/qiskit-visualization-plot\_gate\_map-1.png](/images/api/qiskit/0.40/qiskit-visualization-plot_gate_map-1.png)

